
syntax = "proto3";

option java_package = "com.oes.openfmb.proto";

message AnalogueValue {
  float f = 2;
  int32 i = 4;
}




