
syntax = "proto3";


import "commonmodule/CMV.proto";

option java_package = "com.oes.openfmb.proto";

message DEL {
  CMV phsAB = 6;
  CMV phsBC = 8;
  CMV phsCA = 10;
}




