
syntax = "proto3";



enum UnitSymbolKind {
  noneUnitSymbolKind  = 0;
  meter   = 2;
  gram    = 3;
  A       = 5;
  deg     = 9;
  rad     = 10;
  degC    = 23;
  Farad   = 25;
  sec     = 27;
  Henry   = 28;
  V       = 29;
  Ohm     = 30;
  Joule   = 31;
  Newton  = 32;
  Hz      = 33;
  W       = 38;
  Pa      = 39;
  m2      = 41;
  Siemens = 53;
  VA      = 61;
  VAr     = 63;
  wPerVA  = 65;
  VAh     = 71;
  Wh      = 72;
  VArh    = 73;
  HzPerS  = 75;
  wPerS   = 81;
  min     = 159;
  hour    = 160;
  m3      = 166;
  wPerm2  = 179;
  degF    = 279;
  mph     = 500;
}


